--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-image:url('../images/cards.jpg');
-    display:flex;
+    display:none;
     justify-content: center;
     align-items: center;
 }
@@ -79,6 +79,67 @@ input{
 }
 
 
+/* -- Game Page --*/
+
+
+.game-page{
+    display:block;
+    height:100vh;
+    margin-left:auto;
+    margin-right:auto;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image:url('../images/cards.jpg');
+  }
+  
+  .game-page-content{
+    display:flow-root;
+    height:auto;
+  }
+  
+  .game-details{
+    background-color:#fff;
+    width:max-content;
+    opacity:0.4;
+  }
+
+  .game-info-container{
+    display:flex;
+    grid-column:1/-1;
+    justify-content: space-evenly;
+  }
+  
+ .game-container{
+    display:grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap:15px;
+    margin:50px;
+    justify-content: center;
+    perspective:1000px;
+  }
+  
+  .card{
+    position:relative;
+    width:125px;
+    height:175px;
+    transform:scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    background-color:rgba(0,0,0,0) !important;
+    border:none;
+  }
+  
+  .card-face{
+    display:flex;
+    position: absolute;
+    width:100%;
+    height:100;
+    align-items: center;
+    justify-content: center;
+    backface-visibility: hidden;
+    transition: transform 500ms ease-in-out;
+  }
 
 
 
