updated style for overlays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,19 @@ input{
     transform:scale(1);
   }
   
+  .overlays{
+  display:none;
+  position:fixed;
+  font-size:6em;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  align-items: center;
+  justify-content: center;
+  z-index:1000;
+  color:#f5e110;
+}
   
   
   /* -- Media Query -- */
