--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-image:url('../images/cards.jpg');
-    display:none;
+    display:flex;
     justify-content: center;
     align-items: center;
 }
@@ -85,7 +85,7 @@ input{
 
 
 .game-page{
-    display:block;
+    display:none;
     height:100vh;
     margin-left:auto;
     margin-right:auto;
@@ -112,9 +112,6 @@ input{
     justify-content: space-evenly;
   }
   
-  .easy-game.level-1{
-    display:block;
-  }
   
   .game-container{
     display:grid;
