--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,13 @@ input{
     opacity:0.4;
   }
 
+  #playerName{
+    color:rgb(179, 41, 41);
+    text-align:center;
+    font-weight:normal;
+  }
+  
+
   .game-info-container{
     display:flex;
     grid-column:1/-1;
