--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,8 +210,8 @@ input{
   .card-face{
     display:flex;
     position: absolute;
-    width:100%;
-    height:100;
+    width:125px;
+    height:175px;
     align-items: center;
     justify-content: center;
     backface-visibility: hidden;
