--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body{
 .container.landing-page{
     margin:0;
     padding:0;
+    height:100vh;
     margin-left:auto;
     margin-right:auto;
     background-size: contain;
@@ -86,6 +87,9 @@ input{
 
 #h3-title{
     animation: colorChange .5s ease-in-out infinite;
+    -o-animation: colorChange .5s ease-in-out infinite;
+    -moz-animation: colorChange .5s ease-in-out infinite;
+    -webkit-animation: colorChange .5s ease-in-out infinite
 }
 
 @keyframes colorChange {
@@ -102,9 +106,10 @@ input{
 .game-page{
     margin:0;
     padding:0;
+    height:100vh;
     margin-left:auto;
     margin-right:auto;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-image:url('../images/cards.jpg');
@@ -201,6 +206,9 @@ input{
     transform:scale(1);
     transform-style: preserve-3d;
     transition: transform .5s;
+    -webkit-transition: transform .5s;
+    -moz-transition: transform .5s;
+    -o-transition: transform .5s;
     background-color:rgba(0,0,0,0) !important;
     border:none;
   }
@@ -214,29 +222,49 @@ input{
     justify-content: center;
     backface-visibility: hidden;
     transition: transform 500ms ease-in-out;
+    -o-transition: transform 500ms ease-in-out;
+    -moz-transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
   }
   
   .card-front{
     transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
   }
   
   .card.matched .card.actual{
     transform:scale(.97);
+    -o-transform:scale(.97);
+    -moz-transform:scale(.97);
+    -webkit-transform:scale(.97);
     transition:transform .2s;
+    -o-transition:transform .2s;
+    -moz-transition:transform .2s;
+    -webkit-transition:transform .2s;
   }
   
   .card.visible .card-back{
     transform:rotateY(-180deg);
+    -o-transform:rotateY(-180deg);
+    -moz-transform:rotateY(-180deg);
+    -webkit-transform:rotateY(-180deg);
   }
   
   .card.visible .card-front{
     transform:rotateY(0);
+    -o-transform:rotateY(0);
+    -moz-transform:rotateY(0);
+    -webkit-transform:rotateY(0);
   }
+  
   .card-front:hover .card-actual{
     transform:scale(1);
+    -o-transform:scale(1);
+    -moz-transform:scale(1);
+    -webkit-transform:scale(1);
   }
-
-
   
   .overlays{
   display:none;
@@ -256,6 +284,9 @@ input{
   display:flex;
   flex-direction:column;
   animation:overlays-expand 500ms forwards;
+  -o-animation:overlays-expand 500ms forwards;
+  -moz-animation:overlays-expand 500ms forwards;
+  -webkit-animation:overlays-expand 500ms forwards;
 }
 
 .intro-text{
