--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body{
 .container.landing-page{
     margin:0;
     padding:0;
+    height:100vh;
     margin-left:auto;
     margin-right:auto;
     background-size: contain;
@@ -105,9 +106,10 @@ input{
 .game-page{
     margin:0;
     padding:0;
+    height:100vh;
     margin-left:auto;
     margin-right:auto;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-image:url('../images/cards.jpg');
@@ -182,7 +184,7 @@ input{
     padding:15px;
     margin-bottom: 0;
     justify-content: center;
-    perspective:1000px;
+    perspective:500px;
   }
 
   .container.game-details{
@@ -200,13 +202,23 @@ input{
   .card{
     position:relative;
     width:125px;
-    height:175px;
+    height:180px;
+
     transform:scale(1);
+    -o-transform:scale(1);
+    -moz-transform:scale(1);
+    -webkit-transform:scale(1);
+
     transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    -moz-transform-stle:preserve-3d;
+    -webkit-transform-style: preserve-3d;
+
     transition: transform .5s;
     -webkit-transition: transform .5s;
     -moz-transition: transform .5s;
     -o-transition: transform .5s;
+
     background-color:rgba(0,0,0,0) !important;
     border:none;
   }
@@ -214,8 +226,8 @@ input{
   .card-face{
     display:flex;
     position: absolute;
-    width:125px;
-    height:175px;
+    width:100%;
+    height:100%;
     align-items: center;
     justify-content: center;
     backface-visibility: hidden;
@@ -257,6 +269,11 @@ input{
     -webkit-transform:rotateY(0);
   }
   
+  .card-actual{
+    position: relative;
+  transition: transform 100ms ease-in-out;
+  transform: scale(.9);
+  }
   .card-front:hover .card-actual{
     transform:scale(1);
     -o-transform:scale(1);
