--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,13 @@
     box-sizing: border-box;
 }
 
-html{
-    min-height:100vh;
-}
+
 
 body{
     margin:0;
     padding:0;
     height: 100vh;
     background-color:rgba(0, 0, 0, 1);
-    
-    
 }
 
 /* -- Landing Page --*/
@@ -86,9 +82,6 @@ input{
 
 #h3-title{
     animation: colorChange .5s ease-in-out infinite;
-    -o-animation: colorChange .5s ease-in-out infinite;
-    -moz-animation: colorChange .5s ease-in-out infinite;
-    -webkit-animation: colorChange .5s ease-in-out infinite
 }
 
 @keyframes colorChange {
@@ -200,23 +193,10 @@ input{
   .card{
     position:relative;
     width:125px;
-    height:180px;
-
+    height:175px;
     transform:scale(1);
-    -o-transform:scale(1);
-    -moz-transform:scale(1);
-    -webkit-transform:scale(1);
-
     transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -moz-transform-stle:preserve-3d;
-    -webkit-transform-style: preserve-3d;
-
     transition: transform .5s;
-    -webkit-transition: transform .5s;
-    -moz-transition: transform .5s;
-    -o-transition: transform .5s;
-
     background-color:rgba(0,0,0,0) !important;
     border:none;
   }
@@ -224,56 +204,35 @@ input{
   .card-face{
     display:flex;
     position: absolute;
-    width:100%;
-    height:100%;
+    width:125px;
+    height:175px;
     align-items: center;
     justify-content: center;
     backface-visibility: hidden;
     transition: transform 500ms ease-in-out;
-    -o-transition: transform 500ms ease-in-out;
-    -moz-transition: transform 500ms ease-in-out;
-    -webkit-transition: transform 500ms ease-in-out;
   }
   
   .card-front{
     transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
   }
   
   .card.matched .card.actual{
     transform:scale(.97);
-    -o-transform:scale(.97);
-    -moz-transform:scale(.97);
-    -webkit-transform:scale(.97);
     transition:transform .2s;
-    -o-transition:transform .2s;
-    -moz-transition:transform .2s;
-    -webkit-transition:transform .2s;
   }
   
   .card.visible .card-back{
     transform:rotateY(-180deg);
-    -o-transform:rotateY(-180deg);
-    -moz-transform:rotateY(-180deg);
-    -webkit-transform:rotateY(-180deg);
   }
   
   .card.visible .card-front{
     transform:rotateY(0);
-    -o-transform:rotateY(0);
-    -moz-transform:rotateY(0);
-    -webkit-transform:rotateY(0);
   }
-  
- 
   .card-front:hover .card-actual{
     transform:scale(1);
-    -o-transform:scale(1);
-    -moz-transform:scale(1);
-    -webkit-transform:scale(1);
   }
+
+
   
   .overlays{
   display:none;
@@ -293,9 +252,6 @@ input{
   display:flex;
   flex-direction:column;
   animation:overlays-expand 500ms forwards;
-  -o-animation:overlays-expand 500ms forwards;
-  -moz-animation:overlays-expand 500ms forwards;
-  -webkit-animation:overlays-expand 500ms forwards;
 }
 
 .intro-text{
@@ -305,6 +261,9 @@ input{
     font-style: italic;
     font-weight:700;
     padding:15px;
+}
+#intro{
+  text-align: center;
 }
 
 .intro-text:hover{
@@ -334,19 +293,10 @@ input{
     color: rgba(179, 41, 41,1);
 }
 
-.stars-full{display:none}
-.stars-med{display:none}
-.stars-low{display:none}
-
 h2{
     margin-bottom:1.5rem!important;
 }
-
-
-
-
-
-  
+ 
   
   /* -- Media Query -- */
   @media (max-width: 600px) {
@@ -358,4 +308,21 @@ h2{
         align-items:center;
         justify-content: space-between;
     }
+    .intro-text{
+      font-size:2.4rem;
+      width:70%;
+    
+    }
+    .gameOver{
+      text-align: center;
+      border:5px solid red;
+      width:70%;
+    }
+    .gameover-text{
+      font-size:2.8rem;
+      font-weight:600;
+      animation: colorChange .5s ease-in-out infinite;
+      font-style: oblique;
+    }
+    
   }
