--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,92 +1,92 @@
 /* -- Page Setup --*/
 *{
-    padding:0;
-    margin: 0;
-    box-sizing: border-box;
+  padding:0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 
 
 body{
-    margin:0;
-    padding:0;
-    height: 100vh;
-    background-color:rgba(0, 0, 0, 1);
+  margin:0;
+  padding:0;
+  height: 100vh;
+  background-color:rgba(0, 0, 0, 1);
 }
 
 /* -- Landing Page --*/
 
 
 .container.landing-page{
-    margin:0;
-    padding:0;
-    margin-left:auto;
-    margin-right:auto;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image:url('../images/cards.jpg');
-    display:flex;
-    justify-content: center;
-    align-items: center;
+  margin:0;
+  padding:0;
+  margin-left:auto;
+  margin-right:auto;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container.menu{
-    margin:0;
-    padding:50px;
-    position: relative;
-    width:auto;
-    align-items: center;
-    text-align: center;
-    background-color:rgba(0,0,0,0.6);
-    border: 4px solid #000;
-    border-radius: 10px;
+  margin:0;
+  padding:50px;
+  position: relative;
+  width:auto;
+  align-items: center;
+  text-align: center;
+  background-color:rgba(0,0,0,0.6);
+  border: 4px solid #000;
+  border-radius: 10px;
 }
 .game-snapshot{
-    margin:0;
-    height:400px;
-    margin:auto;
+  margin:0;
+  height:400px;
+  margin:auto;
 }
 
 img.preview{
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-   
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+ 
 }
 input{
-    text-align: center;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    }
+  text-align: center;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  }
 
 .player-info{
-    margin-top:10px;
+  margin-top:10px;
 }
 .h3-title{
-    font-size:3em;
-    font-style: italic;
-    font-weight:900;
-    text-transform: uppercase;
-    color:rgb(222, 7, 7);
+  font-size:3em;
+  font-style: italic;
+  font-weight:900;
+  text-transform: uppercase;
+  color:rgb(222, 7, 7);
 }
 
 .question{
-    color:rgb(219, 236, 28);
-    font-size:1.5em;
-    font-style: italic;
-    font-weight:900;
+  color:rgb(219, 236, 28);
+  font-size:1.5em;
+  font-style: italic;
+  font-weight:900;
 }
 
 
 #h3-title{
-    animation: colorChange .5s ease-in-out infinite;
+  animation: colorChange .5s ease-in-out infinite;
 }
 
 @keyframes colorChange {
-    from {color:rgb(222, 7, 7)}
-    to {color:rgb(222, 211, 7)}
+  from {color:rgb(222, 7, 7)}
+  to {color:rgb(222, 211, 7)}
 }
 
 
@@ -96,281 +96,281 @@ input{
 
 
 .game-page{
-    margin:0;
-    padding:0;
-    margin-left:auto;
-    margin-right:auto;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image:url('../images/cards.jpg');
-    display:none;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .game-page-content{
-    display:flow-root;
-    height:auto;
-    border:4px solid rgba(179, 41, 41,.8);
-    background-color: rgba(0,0,0,.6);
-    border-radius: 5px;
-  }
-  
-  .game-details{
-    background-color:rgba(0, 0, 0,.6);
-    width:max-content;
-    border:4px solid rgba(179, 41, 41,.8);
-  }
+  margin:0;
+  padding:0;
+  margin-left:auto;
+  margin-right:auto;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
+  display:none;
+  justify-content: center;
+  align-items: center;
+}
 
-  #playerName{
-    color:rgb(179, 41, 41);
-    text-align:center;
-    font-weight:normal;
-  }
+.game-page-content{
+  display:flow-root;
+  height:auto;
+  border:4px solid rgba(179, 41, 41,.8);
+  background-color: rgba(0,0,0,.6);
+  border-radius: 5px;
+}
 
-  .stars{
-    list-style: none;
-    display: inline-flex;
-  }
+.game-details{
+  background-color:rgba(0, 0, 0,.6);
+  width:max-content;
+  border:4px solid rgba(179, 41, 41,.8);
+}
 
-  .fa-star{
-      padding-right:5px;
-  }
-  
+#playerName{
+  color:rgb(179, 41, 41);
+  text-align:center;
+  font-weight:normal;
+}
 
-  .game-info-container{
-    display:flex;
-    grid-column:1/-1;
-    justify-content: space-between;
-  }
+.stars{
+  list-style: none;
+  display: inline-flex;
+}
 
-  .game-info{
-    color:rgb(179, 41, 41);
-    font-size:1.5em;
-    font-style: italic;
-    font-weight:900;
-    padding-left:15px;
-  }
+.fa-star{
+    padding-right:5px;
+}
+
+
+.game-info-container{
+  display:flex;
+  grid-column:1/-1;
+  justify-content: space-between;
+}
+
+.game-info{
+  color:rgb(179, 41, 41);
+  font-size:1.5em;
+  font-style: italic;
+  font-weight:900;
+  padding-left:15px;
+}
 
 .fa-star {
-	color: #FFD700;
+color: #FFD700;
 }
 
 .player-title{
-    text-align: center;
-    color:rgb(219, 236, 28);
-    font-size:2em;
-    font-style: italic;
-    font-weight:900;
-    padding-left:15px;
-    margin-top:10px;
+  text-align: center;
+  color:rgb(219, 236, 28);
+  font-size:2em;
+  font-style: italic;
+  font-weight:900;
+  padding-left:15px;
+  margin-top:10px;
 }
-  
-  
-  .game-container{
-    display:grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap:15px;
-    padding:15px;
-    margin-bottom: 0;
-    justify-content: center;
-    perspective:1000px;
-  }
-
-  .container.game-details{
-
-    width:100%;
-  }
-
-  .card-game{
-      padding: 5px;
-      padding-bottom:15px;
-      background-color:rgba(0, 0, 0,.6);
-      border:4px solid rgba(179, 41, 41,.8);
-  }
-  
-  .card{
-    position:relative;
-    width:125px;
-    height:175px;
-    transform:scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
-    background-color:rgba(0,0,0,0) !important;
-    border:none;
-  }
-  
-  .card-face{
-    display:flex;
-    position: absolute;
-    width:125px;
-    height:175px;
-    align-items: center;
-    justify-content: center;
-    backface-visibility: hidden;
-    transition: transform 500ms ease-in-out;
-  }
-  
-  .card-front{
-    transform: rotateY(180deg);
-  }
-  
-  .card.matched .card.actual{
-    transform:scale(.97);
-    transition:transform .2s;
-  }
-  
-  .card.visible .card-back{
-    transform:rotateY(-180deg);
-  }
-  
-  .card.visible .card-front{
-    transform:rotateY(0);
-  }
-  .card-front:hover .card-actual{
-    transform:scale(1);
-  }
 
 
-  
-  .overlays{
-  display:none;
-  position:fixed;
-  font-size:6em;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
+.game-container{
+  display:grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap:15px;
+  padding:15px;
+  margin-bottom: 0;
+  justify-content: center;
+  perspective:1000px;
+}
+
+.container.game-details{
+
+  width:100%;
+}
+
+.card-game{
+    padding: 5px;
+    padding-bottom:15px;
+    background-color:rgba(0, 0, 0,.6);
+    border:4px solid rgba(179, 41, 41,.8);
+}
+
+.card{
+  position:relative;
+  width:125px;
+  height:175px;
+  transform:scale(1);
+  transform-style: preserve-3d;
+  transition: transform .5s;
+  background-color:rgba(0,0,0,0) !important;
+  border:none;
+}
+
+.card-face{
+  display:flex;
+  position: absolute;
+  width:125px;
+  height:175px;
   align-items: center;
   justify-content: center;
-  z-index:1000;
-  color:#f5e110;
+  backface-visibility: hidden;
+  transition: transform 500ms ease-in-out;
+}
+
+.card-front{
+  transform: rotateY(180deg);
+}
+
+.card.matched .card.actual{
+  transform:scale(.97);
+  transition:transform .2s;
+}
+
+.card.visible .card-back{
+  transform:rotateY(-180deg);
+}
+
+.card.visible .card-front{
+  transform:rotateY(0);
+}
+.card-front:hover .card-actual{
+  transform:scale(1);
+}
+
+
+
+.overlays{
+display:none;
+position:fixed;
+font-size:6em;
+top:0;
+left:0;
+right:0;
+bottom:0;
+align-items: center;
+justify-content: center;
+z-index:1000;
+color:#f5e110;
 }
 
 .overlays.visible{
-  display:flex;
-  flex-direction:column;
-  animation:overlays-expand 500ms forwards;
+display:flex;
+flex-direction:column;
+animation:overlays-expand 500ms forwards;
 }
 
 .intro-text{
-    text-transform: uppercase;
-    border:5px solid #f5e110;
-    cursor:pointer;
-    font-style: italic;
-    font-weight:700;
-    padding:15px;
+  text-transform: uppercase;
+  border:5px solid #f5e110;
+  cursor:pointer;
+  font-style: italic;
+  font-weight:700;
+  padding:15px;
 }
 #intro{
-  text-align: center;
+text-align: center;
 }
 
 .intro-text:hover{
-    border:5px solid rgb(219, 14, 14);
-    color:rgb(219, 14, 14);
+  border:5px solid rgb(219, 14, 14);
+  color:rgb(219, 14, 14);
 }
 
 @keyframes overlays-expand{
-  from {
-      background-color:rgba(0,0,0,0);
-      font-size:0em;
-  }
-  to {
-      background-color:rgba(0,0,0,.8);
-      font-size:5em;
-  }
+from {
+    background-color:rgba(0,0,0,0);
+    font-size:0em;
+}
+to {
+    background-color:rgba(0,0,0,.8);
+    font-size:5em;
+}
 }
 
 .overlays-small{
-  font-size:.3em;
-  text-align: center;
-  margin-bottom:20px;
+font-size:.3em;
+text-align: center;
+margin-bottom:20px;
 }
 
 #timeTaken, #totalMoves{
-    font-weight:700;
-    color: rgba(179, 41, 41,1);
+  font-weight:700;
+  color: rgba(179, 41, 41,1);
 }
 
 h2{
-    margin-bottom:1.5rem!important;
+  margin-bottom:1.5rem!important;
 }
 
 .winningOver{
-  text-align: center;
-  border:5px solid red;
-  width:70%;
-  padding:15px;
+text-align: center;
+border:5px solid red;
+width:70%;
+padding:15px;
 }
 
 #winner{
-  font-style:oblique;
-  font-weight:600;
+font-style:oblique;
+font-weight:600;
 }
 
 #totalMoves{
-  animation: colorChange .5s ease-in-out infinite;
+animation: colorChange .5s ease-in-out infinite;
 }
 
 #timeTaken{
-  animation: colorChange .5s ease-in-out infinite;
+animation: colorChange .5s ease-in-out infinite;
 }
 
 #youWon{
-  font-weight:700;
-  animation: colorChange .5s ease-in-out infinite;
+font-weight:700;
+animation: colorChange .5s ease-in-out infinite;
 }
 
 .gameOver{
-  text-align: center;
-  border:5px solid red;
-  width:70%;
+text-align: center;
+border:5px solid red;
+width:70%;
 }
 .gameover-text{
-  font-size:2.8rem;
-  font-weight:600;
-  animation: colorChange .5s ease-in-out infinite;
-  font-style: oblique;
+font-size:2.8rem;
+font-weight:600;
+animation: colorChange .5s ease-in-out infinite;
+font-style: oblique;
 }
 
 
- 
+
+
+/* -- Media Query -- */
+@media (max-width: 600px) {
+  .game-container {
+      grid-template-columns:repeat(2,auto);
+  }
+  .game-info-container{
+      flex-direction:column;
+      align-items:center;
+      justify-content: space-between;
+  }
+  .intro-text{
+    font-size:2.4rem;
+    width:70%;
   
-  /* -- Media Query -- */
-  @media (max-width: 600px) {
-    .game-container {
-        grid-template-columns:repeat(2,auto);
-    }
-    .game-info-container{
-        flex-direction:column;
-        align-items:center;
-        justify-content: space-between;
-    }
-    .intro-text{
-      font-size:2.4rem;
-      width:70%;
-    
-    }
-    .gameOver{
-      text-align: center;
-      border:5px solid red;
-      width:70%;
-    }
-    .gameover-text{
-      font-size:2.8rem;
-      font-weight:600;
-      animation: colorChange .5s ease-in-out infinite;
-      font-style: oblique;
-    }
+  }
+  .gameOver{
+    text-align: center;
+    border:5px solid red;
+    width:70%;
+  }
+  .gameover-text{
+    font-size:2.8rem;
+    font-weight:600;
+    animation: colorChange .5s ease-in-out infinite;
+    font-style: oblique;
+  }
 
-    .winningOver{
-      text-align: center;
-      border:5px solid red;
-      width:70%;
-      
-    }
-
-
+  .winningOver{
+    text-align: center;
+    border:5px solid red;
+    width:70%;
     
   }
+
+
+  
+}
