--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,376 +1,316 @@
 /* -- Page Setup --*/
-*{
-  padding:0;
-  margin: 0;
-  box-sizing: border-box;
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
-
-
-
-body{
-  margin:0;
-  padding:0;
-  height: 100vh;
-  background-color:rgba(0, 0, 0, 1);
+body {
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 1);
 }
-
 /* -- Landing Page --*/
 
-
-.container.landing-page{
-  margin:0;
-  padding:0;
-  margin-left:auto;
-  margin-right:auto;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
-  display:flex;
-  justify-content: center;
-  align-items: center;
+.container.landing-page {
+	margin: 0;
+	padding: 0;
+	margin-left: auto;
+	margin-right: auto;
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
-.container.menu{
-  margin:0;
-  padding:50px;
-  position: relative;
-  width:auto;
-  align-items: center;
-  text-align: center;
-  background-color:rgba(0,0,0,0.6);
-  border: 4px solid #000;
-  border-radius: 10px;
+.container.menu {
+	margin: 0;
+	padding: 50px;
+	position: relative;
+	width: auto;
+	align-items: center;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.6);
+	border: 4px solid #000;
+	border-radius: 10px;
 }
-.game-snapshot{
-  margin:0;
-  height:400px;
-  margin:auto;
+.game-snapshot {
+	margin: 0;
+	height: 400px;
+	margin: auto;
 }
-
-img.preview{
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
- 
+img.preview {
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
 }
-input{
-  text-align: center;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  border-radius: 50px;
-  }
-
-.player-info{
-  margin-top:10px;
+input {
+	text-align: center;
+	-webkit-border-radius: 50px;
+	-moz-border-radius: 50px;
+	border-radius: 50px;
 }
-.h3-title{
-  font-size:3em;
-  font-style: italic;
-  font-weight:900;
-  text-transform: uppercase;
-  color:rgb(222, 7, 7);
+.player-info {
+	margin-top: 10px;
 }
-
-.question{
-  color:rgb(219, 236, 28);
-  font-size:1.5em;
-  font-style: italic;
-  font-weight:900;
+.h3-title {
+	font-size: 3em;
+	font-style: italic;
+	font-weight: 900;
+	text-transform: uppercase;
+	color: rgb(222, 7, 7);
 }
-
-
-#h3-title{
-  animation: colorChange .5s ease-in-out infinite;
+.question {
+	color: rgb(219, 236, 28);
+	font-size: 1.5em;
+	font-style: italic;
+	font-weight: 900;
 }
-
+#h3-title {
+	animation: colorChange .5s ease-in-out infinite;
+}
 @keyframes colorChange {
-  from {color:rgb(222, 7, 7)}
-  to {color:rgb(222, 211, 7)}
+	from {
+		color: rgb(222, 7, 7)
+	}
+	to {
+		color: rgb(222, 211, 7)
+	}
 }
-
-
-
-
 /* -- Game Page --*/
 
-
-.game-page{
-  margin:0;
-  padding:0;
-  margin-left:auto;
-  margin-right:auto;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
-  display:none;
-  justify-content: center;
-  align-items: center;
+.game-page {
+	margin: 0;
+	padding: 0;
+	margin-left: auto;
+	margin-right: auto;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
+	display: none;
+	justify-content: center;
+	align-items: center;
 }
-
-.game-page-content{
-  display:flow-root;
-  height:auto;
-  border:4px solid rgba(179, 41, 41,.8);
-  background-color: rgba(0,0,0,.6);
-  border-radius: 5px;
+.game-page-content {
+	display: flow-root;
+	height: auto;
+	border: 4px solid rgba(179, 41, 41, .8);
+	background-color: rgba(0, 0, 0, .6);
+	border-radius: 5px;
 }
-
-.game-details{
-  background-color:rgba(0, 0, 0,.6);
-  width:max-content;
-  border:4px solid rgba(179, 41, 41,.8);
+.game-details {
+	background-color: rgba(0, 0, 0, .6);
+	width: max-content;
+	border: 4px solid rgba(179, 41, 41, .8);
 }
-
-#playerName{
-  color:rgb(179, 41, 41);
-  text-align:center;
-  font-weight:normal;
+#playerName {
+	color: rgb(179, 41, 41);
+	text-align: center;
+	font-weight: normal;
 }
-
-.stars{
-  list-style: none;
-  display: inline-flex;
+.stars {
+	list-style: none;
+	display: inline-flex;
 }
-
-.fa-star{
-    padding-right:5px;
-}
-
-
-.game-info-container{
-  display:flex;
-  grid-column:1/-1;
-  justify-content: space-between;
-}
-
-.game-info{
-  color:rgb(179, 41, 41);
-  font-size:1.5em;
-  font-style: italic;
-  font-weight:900;
-  padding-left:15px;
-}
-
 .fa-star {
-color: #FFD700;
+	padding-right: 5px;
 }
-
-.player-title{
-  text-align: center;
-  color:rgb(219, 236, 28);
-  font-size:2em;
-  font-style: italic;
-  font-weight:900;
-  padding-left:15px;
-  margin-top:10px;
+.game-info-container {
+	display: flex;
+	grid-column: 1/-1;
+	justify-content: space-between;
 }
-
-
-.game-container{
-  display:grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap:15px;
-  padding:15px;
-  margin-bottom: 0;
-  justify-content: center;
-  perspective:1000px;
+.game-info {
+	color: rgb(179, 41, 41);
+	font-size: 1.5em;
+	font-style: italic;
+	font-weight: 900;
+	padding-left: 15px;
 }
-
-.container.game-details{
-
-  width:100%;
+.player-title {
+	text-align: center;
+	color: rgb(219, 236, 28);
+	font-size: 2em;
+	font-style: italic;
+	font-weight: 900;
+	padding-left: 15px;
+	margin-top: 10px;
 }
-
-.card-game{
-    padding: 5px;
-    padding-bottom:15px;
-    background-color:rgba(0, 0, 0,.6);
-    border:4px solid rgba(179, 41, 41,.8);
+.game-container {
+	display: grid;
+	grid-template-columns: repeat(4, auto);
+	grid-gap: 15px;
+	padding: 15px;
+	margin-bottom: 0;
+	justify-content: center;
+	perspective: 1000px;
 }
-
-.card{
-  position:relative;
-  width:125px;
-  height:175px;
-  transform:scale(1);
-  transform-style: preserve-3d;
-  transition: transform .5s;
-  background-color:rgba(0,0,0,0) !important;
-  border:none;
+.container.game-details {
+	width: 100%;
 }
-
-.card-face{
-  display:flex;
-  position: absolute;
-  width:125px;
-  height:175px;
-  align-items: center;
-  justify-content: center;
-  backface-visibility: hidden;
-  transition: transform 500ms ease-in-out;
+.card-game {
+	padding: 5px;
+	padding-bottom: 15px;
+	background-color: rgba(0, 0, 0, .6);
+	border: 4px solid rgba(179, 41, 41, .8);
 }
-
-.card-front{
-  transform: rotateY(180deg);
+.card {
+	position: relative;
+	width: 125px;
+	height: 175px;
+	transform: scale(1);
+	transform-style: preserve-3d;
+	transition: transform .5s;
+	background-color: rgba(0, 0, 0, 0) !important;
+	border: none;
 }
-
-.card.matched .card.actual{
-  transform:scale(.97);
-  transition:transform .2s;
+.card-face {
+	display: flex;
+	position: absolute;
+	width: 125px;
+	height: 175px;
+	align-items: center;
+	justify-content: center;
+	backface-visibility: hidden;
+	transition: transform 500ms ease-in-out;
 }
-
-.card.visible .card-back{
-  transform:rotateY(-180deg);
+.card-front {
+	transform: rotateY(180deg);
 }
-
-.card.visible .card-front{
-  transform:rotateY(0);
+.card.matched .card.actual {
+	transform: scale(.97);
+	transition: transform .2s;
 }
-.card-front:hover .card-actual{
-  transform:scale(1);
+.card.visible .card-back {
+	transform: rotateY(-180deg);
 }
-
-
-
-.overlays{
-display:none;
-position:fixed;
-font-size:6em;
-top:0;
-left:0;
-right:0;
-bottom:0;
-align-items: center;
-justify-content: center;
-z-index:1000;
-color:#f5e110;
+.card.visible .card-front {
+	transform: rotateY(0);
 }
-
-.overlays.visible{
-display:flex;
-flex-direction:column;
-animation:overlays-expand 500ms forwards;
+.card-front:hover .card-actual {
+	transform: scale(1);
 }
+/*-- Overlays css --*/
 
-.intro-text{
-  text-transform: uppercase;
-  border:5px solid #f5e110;
-  cursor:pointer;
-  font-style: italic;
-  font-weight:700;
-  padding:15px;
+.overlays {
+	display: none;
+	position: fixed;
+	font-size: 6em;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
+	color: #f5e110;
 }
-#intro{
-text-align: center;
+.overlays.visible {
+	display: flex;
+	flex-direction: column;
+	animation: overlays-expand 500ms forwards;
 }
-
-.intro-text:hover{
-  border:5px solid rgb(219, 14, 14);
-  color:rgb(219, 14, 14);
+.intro-text {
+	text-transform: uppercase;
+	border: 5px solid #f5e110;
+	cursor: pointer;
+	font-style: italic;
+	font-weight: 700;
+	padding: 15px;
 }
-
-@keyframes overlays-expand{
-from {
-    background-color:rgba(0,0,0,0);
-    font-size:0em;
+#intro {
+	text-align: center;
 }
-to {
-    background-color:rgba(0,0,0,.8);
-    font-size:5em;
+.intro-text:hover {
+	border: 5px solid rgb(219, 14, 14);
+	color: rgb(219, 14, 14);
 }
+@keyframes overlays-expand {
+	from {
+		background-color: rgba(0, 0, 0, 0);
+		font-size: 0em;
+	}
+	to {
+		background-color: rgba(0, 0, 0, .8);
+		font-size: 5em;
+	}
 }
-
-.overlays-small{
-font-size:.3em;
-text-align: center;
-margin-bottom:20px;
+.overlays-small {
+	font-size: .3em;
+	text-align: center;
+	margin-bottom: 20px;
 }
-
-#timeTaken, #totalMoves{
-  font-weight:700;
-  color: rgba(179, 41, 41,1);
+#timeTaken, #totalMoves {
+	font-weight: 700;
+	color: rgba(179, 41, 41, 1);
 }
-
-h2{
-  margin-bottom:1.5rem!important;
+h2 {
+	margin-bottom: 1.5rem!important;
 }
-
-.winningOver{
-text-align: center;
-border:5px solid red;
-width:70%;
-padding:15px;
+.winningOver {
+	text-align: center;
+	border: 5px solid red;
+	width: 70%;
+	padding: 15px;
 }
-
-#winner{
-font-style:oblique;
-font-weight:600;
+#winner {
+	font-style: oblique;
+	font-weight: 600;
 }
-
-#totalMoves{
-animation: colorChange .5s ease-in-out infinite;
+#totalMoves {
+	animation: colorChange .5s ease-in-out infinite;
 }
-
-#timeTaken{
-animation: colorChange .5s ease-in-out infinite;
+#timeTaken {
+	animation: colorChange .5s ease-in-out infinite;
 }
-
-#youWon{
-font-weight:700;
-animation: colorChange .5s ease-in-out infinite;
+#youWon {
+	font-weight: 700;
+	animation: colorChange .5s ease-in-out infinite;
 }
-
-.gameOver{
-text-align: center;
-border:5px solid red;
-width:70%;
+.gameOver {
+	text-align: center;
+	border: 5px solid red;
+	width: 70%;
 }
-.gameover-text{
-font-size:2.8rem;
-font-weight:600;
-animation: colorChange .5s ease-in-out infinite;
-font-style: oblique;
+.gameover-text {
+	font-size: 2.8rem;
+	font-weight: 600;
+	animation: colorChange .5s ease-in-out infinite;
+	font-style: oblique;
 }
-
-
-
-
 /* -- Media Query -- */
+
 @media (max-width: 600px) {
-  .game-container {
-      grid-template-columns:repeat(2,auto);
-  }
-  .game-info-container{
-      flex-direction:column;
-      align-items:center;
-      justify-content: space-between;
-  }
-  .intro-text{
-    font-size:2.4rem;
-    width:70%;
-  
-  }
-  .gameOver{
-    text-align: center;
-    border:5px solid red;
-    width:70%;
-  }
-  .gameover-text{
-    font-size:2.8rem;
-    font-weight:600;
-    animation: colorChange .5s ease-in-out infinite;
-    font-style: oblique;
-  }
-
-  .winningOver{
-    text-align: center;
-    border:5px solid red;
-    width:70%;
-    
-  }
-
-
-  
+	.game-container {
+		grid-template-columns: repeat(2, auto);
+	}
+	.game-info-container {
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.intro-text {
+		font-size: 2.4rem;
+		width: 70%;
+	}
+	.gameOver {
+		text-align: center;
+		border: 5px solid red;
+		width: 70%;
+	}
+	.gameover-text {
+		font-size: 2.8rem;
+		font-weight: 600;
+		animation: colorChange .5s ease-in-out infinite;
+		font-style: oblique;
+	}
+	.winningOver {
+		text-align: center;
+		border: 5px solid red;
+		width: 70%;
+	}
 }
