--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,26 @@
 body {
 	margin: 0;
 	padding: 0;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 1);
+
+	background-color: rgb(0, 0, 0);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
 }
 /* -- Landing Page --*/
 
 .container.landing-page {
 	margin: 0;
 	padding: 0;
+	height:100vh;
+	width:100%;
 	margin-left: auto;
 	margin-right: auto;
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
-	display: flex;
+	display:flex;
 	justify-content: center;
 	align-items: center;
+	position:relative;
 }
 .container.menu {
 	margin: 0;
@@ -33,8 +36,8 @@ body {
 	width: auto;
 	align-items: center;
 	text-align: center;
-	background-color: rgba(0, 0, 0, 0.6);
-	border: 4px solid #000;
+	background-color: rgba(0, 0, 0, 0.8);
+	border: 10px solid rgb(255, 99, 8);
 	border-radius: 10px;
 }
 .game-snapshot {
@@ -44,8 +47,9 @@ body {
 }
 img.preview {
 	height: 100%;
-	width: 100%;
+	width: auto;
 	object-fit: contain;
+	padding:15px;
 }
 input {
 	text-align: center;
@@ -82,15 +86,12 @@ input {
 }
 /* -- Game Page --*/
 
-.game-page {
+.container.game-page {
 	margin: 0;
 	padding: 0;
 	margin-left: auto;
 	margin-right: auto;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-image: url("https://res.cloudinary.com/pysched/image/upload/v1583235669/images/cards_el9qnq.jpg");
+
 	display: none;
 	justify-content: center;
 	align-items: center;
@@ -98,15 +99,13 @@ input {
 .game-page-content {
 	display: flow-root;
 	height: auto;
-	border: 4px solid rgba(179, 41, 41, .8);
-	background-color: rgba(0, 0, 0, .6);
-	border-radius: 5px;
+	background-color: rgba(0, 0, 0, 0.8);
+	border: 10px solid rgb(255, 99, 8);
+	border-radius: 10px;
+	margin-top: 10%;
+	margin-bottom:10%;
 }
-.game-details {
-	background-color: rgba(0, 0, 0, .6);
-	width: max-content;
-	border: 4px solid rgba(179, 41, 41, .8);
-}
+
 #playerName {
 	color: rgb(179, 41, 41);
 	text-align: center;
@@ -155,8 +154,7 @@ input {
 .card-game {
 	padding: 5px;
 	padding-bottom: 15px;
-	background-color: rgba(0, 0, 0, .6);
-	border: 4px solid rgba(179, 41, 41, .8);
+	
 }
 .card {
 	position: relative;
@@ -253,9 +251,11 @@ h2 {
 }
 .winningOver {
 	text-align: center;
-	border: 5px solid red;
-	width: 70%;
-	padding: 15px;
+	background-color: rgba(0, 0, 0, 0.8);
+	border: 10px solid rgb(255, 99, 8);
+	border-radius: 10px;
+	width: auto;
+	padding: 50px;
 }
 #winner {
 	font-style: oblique;
@@ -273,8 +273,11 @@ h2 {
 }
 .gameOver {
 	text-align: center;
-	border: 5px solid red;
-	width: 70%;
+	background-color: rgba(0, 0, 0, 0.8);
+	border: 10px solid rgb(255, 99, 8);
+	border-radius: 10px;
+	width: auto;
+	padding:70px;
 }
 .gameover-text {
 	font-size: 2.8rem;
@@ -286,7 +289,7 @@ h2 {
 
 @media (max-width: 600px) {
 	.game-container {
-		grid-template-columns: repeat(2, auto);
+		grid-template-columns: repeat(4, auto);
 	}
 	.game-info-container {
 		flex-direction: column;
@@ -299,8 +302,7 @@ h2 {
 	}
 	.gameOver {
 		text-align: center;
-		border: 5px solid red;
-		width: 70%;
+
 	}
 	.gameover-text {
 		font-size: 2.8rem;
@@ -310,7 +312,6 @@ h2 {
 	}
 	.winningOver {
 		text-align: center;
-		border: 5px solid red;
-		width: 70%;
+		
 	}
 }
