--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 .container.landing-page {
 	margin: 0;
 	padding: 0;
-	height:100vh;
+	height:100%;
 	width:100%;
 	margin-left: auto;
 	margin-right: auto;
@@ -289,7 +289,7 @@ h2 {
 
 @media (max-width: 600px) {
 	.game-container {
-		grid-template-columns: repeat(4, auto);
+		grid-template-columns: repeat(2, auto);
 	}
 	.game-info-container {
 		flex-direction: column;
@@ -304,6 +304,7 @@ h2 {
 		text-align: center;
 
 	}
+	
 	.gameover-text {
 		font-size: 2.8rem;
 		font-weight: 600;
